# mini-code-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  build-constraints.in  build-constraints.txt  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-framework-light-core.md  0002-provider-wire-protocols.md  0003-workspace-boundary.md  0004-governed-file-writes.md  0005-argv-command-runner.md  0006-deterministic-context-budget.md  0007-sqlite-session-trace.md  0009-hardened-readonly-git.md  0010-fixed-pytest-junit-boundary.md  0012-inert-skills-host-hooks.md  0013-host-pinned-stdio-mcp.md  0015-governed-worktree-candidates.md
docs/architecture/: context-budget.md  governed-command-execution.md  governed-extensions.md  governed-mcp.md  governed-test-execution.md  governed-worktree-candidates.md  governed-writes.md  provider-adapters.md  readonly-git.md  readonly-tools.md  session-trace.md  threat-model.md
docs/learning/: knowledge-map.md  m7-cli-provider-runtime.md  m8-web-console.md  progress.md
docs/resume/: m7-cli-project-profile.md  m8-web-console-profile.md  project-profile.md
docs/superpowers/plans/: 2026-06-29-m0-engineering-foundation.md  2026-06-29-m1-agent-core.md  2026-06-29-m1b-provider-adapters.md  2026-06-29-m2c-governed-command-execution.md  2026-06-29-m3a-context-budget.md  2026-06-29-m3b-session-trace.md  2026-06-30-m3c-checkpoint-resume.md  2026-06-30-m4a-readonly-git.md  2026-06-30-m4b-governed-pytest.md  2026-06-30-m4c-bounded-repair-loop.md  2026-07-01-m5a-governed-skills.md  2026-07-01-m5a-tool-hooks.md  2026-07-01-m5b-governed-mcp.md  2026-07-01-m6a-bounded-subagents.md  2026-07-02-m6b-worktree-candidates.md  2026-07-02-m7-cli-provider-runtime.md  2026-07-02-m8-web-console.md
docs/superpowers/specs/: 2026-06-29-m2c-governed-command-execution-design.md  2026-06-29-m3a-context-budget-design.md  2026-06-29-m3b-session-trace-design.md  2026-06-29-mini-code-agent-design.md  2026-06-30-m3c-checkpoint-resume-design.md  2026-06-30-m4a-readonly-git-design.md  2026-06-30-m4b-governed-pytest-design.md  2026-06-30-m4c-bounded-repair-loop-design.md  2026-07-01-m5a-skills-hooks-design.md  2026-07-01-m5b-governed-mcp-design.md  2026-07-01-m6-governed-subagents-worktrees-design.md  2026-07-02-m7-cli-provider-runtime-design.md  2026-07-02-m8-web-console-design.md
src/mini_code_agent/: __init__.py  __main__.py  application.py  cli.py  config.py  diagnostics.py  logging.py  terminal.py
src/mini_code_agent/agent/: events.py  models.py  runtime.py
src/mini_code_agent/checkpoint/: models.py  workspace.py
src/mini_code_agent/command/: environment.py  errors.py  models.py  runner.py
src/mini_code_agent/context/: __init__.py  errors.py  manager.py  models.py
src/mini_code_agent/domain/: content.py  messages.py
src/mini_code_agent/hooks/: __init__.py  models.py  runner.py
src/mini_code_agent/mcp/: __init__.py  client.py  sdk.py  tools.py
src/mini_code_agent/persistence/: codec.py  journal.py  schema.py  store.py  trace.py
src/mini_code_agent/policy/: __init__.py  approval.py  engine.py  executor.py  models.py
src/mini_code_agent/providers/: anthropic.py  http.py
src/mini_code_agent/repair/: approval.py  models.py  scope.py  worker.py
src/mini_code_agent/skills/: __init__.py  catalog.py  models.py  parser.py  tools.py
src/mini_code_agent/subagents/: __init__.py  contracts.py  evidence.py  models.py  tools.py
src/mini_code_agent/testing/: __init__.py  junit.py  models.py  pytest_runner.py
src/mini_code_agent/tools/: __init__.py  _mutation.py  edit_file.py  read_file.py  registry.py  search_text.py  write_file.py
tests/: smoke_test.py  worktree_artifact_test.py
tests/cli/: test_cli.py
tests/integration/: test_agent_loop.py  test_candidate_adoption.py  test_checkpoint_resume_agent.py  test_context_budget_agent.py  test_governed_mcp_agent.py  test_governed_skills_agent.py  test_governed_subagent_agent.py  test_governed_tool_hooks_agent.py  test_governed_write_agent.py  test_persistent_trace_agent.py  test_readonly_workspace_agent.py  test_worktree_materialization.py
tests/unit/: test_application.py  test_config.py  test_diagnostics.py  test_logging.py  test_package.py  test_terminal.py
(+72 files in other folders)
