[project]
name = "mini-code-agent"
version = "0.17.0a0"
description = "A framework-light, provider-neutral, enterprise-grade mini code agent."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "Apache-2.0"
authors = [
    { name = "Lin Jiaye" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "defusedxml>=0.7.1,<0.8",
    "httpx>=0.28,<1",
    "httpx-sse>=0.4,<1",
    "jsonschema>=4.23,<5",
    "mcp>=1.28.1,<2",
    "platformdirs>=4.3,<5",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "pyyaml>=6.0.2,<7",
    "rich>=13.9,<15",
    "typer>=0.15,<1",
]

[project.scripts]
mini-code-agent = "mini_code_agent.cli:app"

[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.2,<2",
    "hatchling==1.30.1",
    "pyright>=1.1.390",
    "pytest>=8.3,<10",
    "pytest-asyncio>=0.25,<2",
    "pytest-cov>=6,<8",
    "ruff>=0.9",
    "types-defusedxml>=0.7.0.20260504,<0.8",
    "types-pyyaml>=6.0.12.20250516,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mini_code_agent"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.coverage",
    "/.env",
    "/.git",
    "/.idea",
    "/.mini-code-agent",
    "/.pytest_cache",
    "/.pyright",
    "/.ruff_cache",
    "/.venv",
    "/.vscode",
    "/.worktrees",
    "/build",
    "/dist",
    "/htmlcov",
    "**/__pycache__",
]

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-config", "--strict-markers"]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["mini_code_agent"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
include = ["src", "tests"]
exclude = [".venv", "build", "dist"]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
